# highlights_activator

./: .bash_history  .coveragerc  .dockerignore  .env.dev  .gitignore  Dockerfile  celerybeat-schedule.db  conftest.py  docker-compose.yml  dump.rdb  entrypoint.sh  erl_crash.dump  filename  old-requirements.txt  prod.certbot.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: deploy.yml
api/: serializers.py  services.py  urls.py  views.py
api/auth/: serializers.py  services.py  urls.py  views.py
api/telegram/: serializers.py  services.py  urls.py  views.py
api/tests/: test_quote_crud.py  test_signin.py
core/: forms.py  get_book_covers.py  kindle_parser.py  models.py  new_kindle_parser.py  notifications.py  pagination.py  permissions.py  send_email.py  services.py  tasks.py  telegram_bot.py  test_parser.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_userfiles_owner.py  0002_initial.py  0002_userfile_rename_book_title_db_book_title_and_more.py  0003_alter_quote_comment_alter_quote_text.py  0003_book_alter_userfiles_file_alter_userfiles_owner_and_more.py  0003_book_quotes_count.py  0004_alter_book_owner_alter_quote_owner.py  0004_remove_book_quotes_count.py  0004_remove_orders_stripe_order_id_and_more.py  0005_alter_book_owner_alter_book_show_status_and_more.py  0005_quote_like.py  0005_remove_orders_stripe_user_email.py  0006_alter_book_title.py  0006_book_quotes_count_alter_book_owner.py  0006_quote_comment.py  0007_book_author.py  0008_book_cover.py  0009_orders.py
db backups/: .db.sqlite3.icloud
dev/: mailhog.yml
nginx/: default.conf
production/web/: Dockerfile
project/: celery.py  settings.py  urls.py  yasg.py
static/: index.js  styles.css
telegram_bot/: Dockerfile  db.py  telegram.db  telegram_bot.py
templates/: base.html  book_page.html  by_book.html  by_book_api.html  by_book_api_old.html  check_email_for_password.html  confirm_email.html  daily.html  daily_new.html  dashboard.html  dashboard_api.html  email_activate.html  favorite.html  forgot_password.html  home.html  landing.html  landing_old.html  layouts-detached.html  layouts-vertical-edit.html  login.html  login_demo.html  logout.html  quote_share.html  register.html  set_password.html  settings.html  upload.html  upload_wait.html
users/: admin.py  managers.py  models.py
(+84 files in other folders)
